syntax = "proto3";

package pricing;

option go_package = "./proto;pricing";

service Pricing {
	rpc Call(PricingRequest) returns (PricingResponse) {}
}

message PricingRequest {
	string network = 1;
	string contract = 2;
	string amount = 3;
	int32 timestamp = 4;
	string currency = 5;
}

message PricingResponse {
	float total_value = 1;
	float unit_value = 2;
	float amount_decimals = 3;
}